common/atuin/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atuin
  namespace: atuin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: atuin.nokiy.net
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: traefik
  rules:
  - host: atuin.nokiy.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: atuin
            port:
              name: http
  tls:
  - hosts:
    - atuin.nokiy.net
    secretName: atuin-tls-cert
